<?xml version="1.0"?>
<package format="2">
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>The mono and stereo feature_tracker package</description>

  <maintainer email="lcw18@mails.tsinghua.edu.cn">lcw18</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
 
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
